MiniSchemeParser.java
/* Generated By:JavaCC: Do not edit this line. MiniSchemeParser.java */
import syntaxtree.*;
import java.util.Vector;


public class MiniSchemeParser implements MiniSchemeParserConstants {

  static final public Goal Goal() throws ParseException {
   NodeListOptional n0 = new NodeListOptional();
   Line n1;
   NodeToken n2;
   Token n3;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LPAREN:
      case TRUE:
      case FALSE:
      case INTEGER_LITERAL:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      n1 = Line();
        n0.addNode(n1);
    }
     n0.nodes.trimToSize();
    n3 = jj_consume_token(0);
      n3.beginColumn++; n3.endColumn++;
      n2 = JTBToolkit.makeNodeToken(n3);
     {if (true) return new Goal(n0,n2);}
    throw new Error("Missing return statement in function");
  }

  static final public Line Line() throws ParseException {
   Expression n0;
    n0 = Expression();
     {if (true) return new Line(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public Expression Expression() throws ParseException {
   NodeChoice n0;
   IntegerLiteral n1;
   TrueLiteral n2;
   FalseLiteral n3;
   Identifier n4;
   ListExpr n5;
   PlusExpression n6;
   MinusExpression n7;
   MultiplyExpression n8;
   DivideExpression n9;
   GTExpression n10;
   LTExpression n11;
   EQExpression n12;
   IfExpression n13;
   DefineExpression n14;
   Assignment n15;
   ProcedureExp n16;
   CarExpr n17;
   CdrExpr n18;
   Application n19;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_LITERAL:
      n1 = IntegerLiteral();
        n0 = new NodeChoice(n1, 0);
      break;
    case TRUE:
      n2 = TrueLiteral();
        n0 = new NodeChoice(n2, 1);
      break;
    case FALSE:
      n3 = FalseLiteral();
        n0 = new NodeChoice(n3, 2);
      break;
    case IDENTIFIER:
      n4 = Identifier();
        n0 = new NodeChoice(n4, 3);
      break;
    default:
      jj_la1[1] = jj_gen;
      if (jj_2_1(2)) {
        n5 = ListExpr();
        n0 = new NodeChoice(n5, 4);
      } else if (jj_2_2(2)) {
        n6 = PlusExpression();
        n0 = new NodeChoice(n6, 5);
      } else if (jj_2_3(2)) {
        n7 = MinusExpression();
        n0 = new NodeChoice(n7, 6);
      } else if (jj_2_4(2)) {
        n8 = MultiplyExpression();
        n0 = new NodeChoice(n8, 7);
      } else if (jj_2_5(2)) {
        n9 = DivideExpression();
        n0 = new NodeChoice(n9, 8);
      } else if (jj_2_6(2)) {
        n10 = GTExpression();
        n0 = new NodeChoice(n10, 9);
      } else if (jj_2_7(2)) {
        n11 = LTExpression();
        n0 = new NodeChoice(n11, 10);
      } else if (jj_2_8(2)) {
        n12 = EQExpression();
        n0 = new NodeChoice(n12, 11);
      } else if (jj_2_9(2)) {
        n13 = IfExpression();
        n0 = new NodeChoice(n13, 12);
      } else if (jj_2_10(2)) {
        n14 = DefineExpression();
        n0 = new NodeChoice(n14, 13);
      } else if (jj_2_11(2)) {
        n15 = Assignment();
        n0 = new NodeChoice(n15, 14);
      } else if (jj_2_12(2)) {
        n16 = ProcedureExp();
        n0 = new NodeChoice(n16, 15);
      } else if (jj_2_13(2)) {
        n17 = CarExpr();
        n0 = new NodeChoice(n17, 16);
      } else if (jj_2_14(2)) {
        n18 = CdrExpr();
        n0 = new NodeChoice(n18, 17);
      } else if (jj_2_15(2)) {
        n19 = Application();
        n0 = new NodeChoice(n19, 18);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
     {if (true) return new Expression(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public IntegerLiteral IntegerLiteral() throws ParseException {
   NodeToken n0;
   Token n1;
    n1 = jj_consume_token(INTEGER_LITERAL);
                          n0 = JTBToolkit.makeNodeToken(n1);
     {if (true) return new IntegerLiteral(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public TrueLiteral TrueLiteral() throws ParseException {
   NodeToken n0;
   Token n1;
    n1 = jj_consume_token(TRUE);
             n0 = JTBToolkit.makeNodeToken(n1);
     {if (true) return new TrueLiteral(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public FalseLiteral FalseLiteral() throws ParseException {
   NodeToken n0;
   Token n1;
    n1 = jj_consume_token(FALSE);
             n0 = JTBToolkit.makeNodeToken(n1);
     {if (true) return new FalseLiteral(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public ListExpr ListExpr() throws ParseException {
   NodeToken n0;
   Token n1;
   NodeToken n2;
   Token n3;
   NodeListOptional n4 = new NodeListOptional();
   IntegerLiteral n5;
   NodeToken n6;
   Token n7;
    n1 = jj_consume_token(LPAREN);
            n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(31);
                n2 = JTBToolkit.makeNodeToken(n3);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER_LITERAL:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      n5 = IntegerLiteral();
        n4.addNode(n5);
    }
     n4.nodes.trimToSize();
    n7 = jj_consume_token(RPAREN);
            n6 = JTBToolkit.makeNodeToken(n7);
     {if (true) return new ListExpr(n0,n2,n4,n6);}
    throw new Error("Missing return statement in function");
  }

  static final public PlusExpression PlusExpression() throws ParseException {
   NodeToken n0;
   Token n1;
   NodeToken n2;
   Token n3;
   Expression n4;
   Expression n5;
   NodeToken n6;
   Token n7;
    n1 = jj_consume_token(LPAREN);
            n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(PLUS);
            n2 = JTBToolkit.makeNodeToken(n3);
    n4 = Expression();
    n5 = Expression();
    n7 = jj_consume_token(RPAREN);
            n6 = JTBToolkit.makeNodeToken(n7);
     {if (true) return new PlusExpression(n0,n2,n4,n5,n6);}
    throw new Error("Missing return statement in function");
  }

  static final public MinusExpression MinusExpression() throws ParseException {
   NodeToken n0;
   Token n1;
   NodeToken n2;
   Token n3;
   Expression n4;
   Expression n5;
   NodeToken n6;
   Token n7;
    n1 = jj_consume_token(LPAREN);
            n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(MINUS);
            n2 = JTBToolkit.makeNodeToken(n3);
    n4 = Expression();
    n5 = Expression();
    n7 = jj_consume_token(RPAREN);
            n6 = JTBToolkit.makeNodeToken(n7);
     {if (true) return new MinusExpression(n0,n2,n4,n5,n6);}
    throw new Error("Missing return statement in function");
  }

  static final public MultiplyExpression MultiplyExpression() throws ParseException {
   NodeToken n0;
   Token n1;
   NodeToken n2;
   Token n3;
   Expression n4;
   Expression n5;
   NodeToken n6;
   Token n7;
    n1 = jj_consume_token(LPAREN);
            n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(MULTIPLY);
            n2 = JTBToolkit.makeNodeToken(n3);
    n4 = Expression();
    n5 = Expression();
    n7 = jj_consume_token(RPAREN);
            n6 = JTBToolkit.makeNodeToken(n7);
     {if (true) return new MultiplyExpression(n0,n2,n4,n5,n6);}
    throw new Error("Missing return statement in function");
  }

  static final public DivideExpression DivideExpression() throws ParseException {
   NodeToken n0;
   Token n1;
   NodeToken n2;
   Token n3;
   Expression n4;
   Expression n5;
   NodeToken n6;
   Token n7;
    n1 = jj_consume_token(LPAREN);
            n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(DIVIDE);
            n2 = JTBToolkit.makeNodeToken(n3);
    n4 = Expression();
    n5 = Expression();
    n7 = jj_consume_token(RPAREN);
            n6 = JTBToolkit.makeNodeToken(n7);
     {if (true) return new DivideExpression(n0,n2,n4,n5,n6);}
    throw new Error("Missing return statement in function");
  }

  static final public GTExpression GTExpression() throws ParseException {
   NodeToken n0;
   Token n1;
   NodeToken n2;
   Token n3;
   Expression n4;
   Expression n5;
   NodeToken n6;
   Token n7;
    n1 = jj_consume_token(LPAREN);
            n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(GT);
            n2 = JTBToolkit.makeNodeToken(n3);
    n4 = Expression();
    n5 = Expression();
    n7 = jj_consume_token(RPAREN);
            n6 = JTBToolkit.makeNodeToken(n7);
     {if (true) return new GTExpression(n0,n2,n4,n5,n6);}
    throw new Error("Missing return statement in function");
  }

  static final public LTExpression LTExpression() throws ParseException {
   NodeToken n0;
   Token n1;
   NodeToken n2;
   Token n3;
   Expression n4;
   Expression n5;
   NodeToken n6;
   Token n7;
    n1 = jj_consume_token(LPAREN);
            n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(LT);
            n2 = JTBToolkit.makeNodeToken(n3);
    n4 = Expression();
    n5 = Expression();
    n7 = jj_consume_token(RPAREN);
            n6 = JTBToolkit.makeNodeToken(n7);
     {if (true) return new LTExpression(n0,n2,n4,n5,n6);}
    throw new Error("Missing return statement in function");
  }

  static final public EQExpression EQExpression() throws ParseException {
   NodeToken n0;
   Token n1;
   NodeToken n2;
   Token n3;
   Expression n4;
   Expression n5;
   NodeToken n6;
   Token n7;
    n1 = jj_consume_token(LPAREN);
            n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(EQ);
            n2 = JTBToolkit.makeNodeToken(n3);
    n4 = Expression();
    n5 = Expression();
    n7 = jj_consume_token(RPAREN);
            n6 = JTBToolkit.makeNodeToken(n7);
     {if (true) return new EQExpression(n0,n2,n4,n5,n6);}
    throw new Error("Missing return statement in function");
  }

  static final public IfExpression IfExpression() throws ParseException {
   NodeToken n0;
   Token n1;
   NodeToken n2;
   Token n3;
   Expression n4;
   Expression n5;
   Expression n6;
   NodeToken n7;
   Token n8;
    n1 = jj_consume_token(LPAREN);
            n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(IF);
             n2 = JTBToolkit.makeNodeToken(n3);
    n4 = Expression();
    n5 = Expression();
    n6 = Expression();
    n8 = jj_consume_token(RPAREN);
            n7 = JTBToolkit.makeNodeToken(n8);
     {if (true) return new IfExpression(n0,n2,n4,n5,n6,n7);}
    throw new Error("Missing return statement in function");
  }

  static final public DefineExpression DefineExpression() throws ParseException {
   NodeToken n0;
   Token n1;
   NodeToken n2;
   Token n3;
   Identifier n4;
   Expression n5;
   NodeToken n6;
   Token n7;
    n1 = jj_consume_token(LPAREN);
            n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(DEFINE);
                 n2 = JTBToolkit.makeNodeToken(n3);
    n4 = Identifier();
    n5 = Expression();
    n7 = jj_consume_token(RPAREN);
            n6 = JTBToolkit.makeNodeToken(n7);
     {if (true) return new DefineExpression(n0,n2,n4,n5,n6);}
    throw new Error("Missing return statement in function");
  }

  static final public Identifier Identifier() throws ParseException {
   NodeToken n0;
   Token n1;
    n1 = jj_consume_token(IDENTIFIER);
                     n0 = JTBToolkit.makeNodeToken(n1);
     {if (true) return new Identifier(n0);}
    throw new Error("Missing return statement in function");
  }

  static final public CarExpr CarExpr() throws ParseException {
   NodeToken n0;
   Token n1;
   NodeToken n2;
   Token n3;
   Expression n4;
   NodeToken n5;
   Token n6;
    n1 = jj_consume_token(LPAREN);
            n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(CAR);
              n2 = JTBToolkit.makeNodeToken(n3);
    n4 = Expression();
    n6 = jj_consume_token(RPAREN);
            n5 = JTBToolkit.makeNodeToken(n6);
     {if (true) return new CarExpr(n0,n2,n4,n5);}
    throw new Error("Missing return statement in function");
  }

  static final public CdrExpr CdrExpr() throws ParseException {
   NodeToken n0;
   Token n1;
   NodeToken n2;
   Token n3;
   Expression n4;
   NodeToken n5;
   Token n6;
    n1 = jj_consume_token(LPAREN);
            n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(CDR);
              n2 = JTBToolkit.makeNodeToken(n3);
    n4 = Expression();
    n6 = jj_consume_token(RPAREN);
            n5 = JTBToolkit.makeNodeToken(n6);
     {if (true) return new CdrExpr(n0,n2,n4,n5);}
    throw new Error("Missing return statement in function");
  }

  static final public Assignment Assignment() throws ParseException {
   NodeToken n0;
   Token n1;
   NodeToken n2;
   Token n3;
   Identifier n4;
   Expression n5;
   NodeToken n6;
   Token n7;
    n1 = jj_consume_token(LPAREN);
            n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(32);
               n2 = JTBToolkit.makeNodeToken(n3);
    n4 = Identifier();
    n5 = Expression();
    n7 = jj_consume_token(RPAREN);
            n6 = JTBToolkit.makeNodeToken(n7);
     {if (true) return new Assignment(n0,n2,n4,n5,n6);}
    throw new Error("Missing return statement in function");
  }

  static final public ProcedureExp ProcedureExp() throws ParseException {
   NodeToken n0;
   Token n1;
   NodeToken n2;
   Token n3;
   NodeToken n4;
   Token n5;
   NodeListOptional n6 = new NodeListOptional();
   Identifier n7;
   NodeToken n8;
   Token n9;
   Expression n10;
   NodeToken n11;
   Token n12;
    n1 = jj_consume_token(LPAREN);
            n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(LAMBDA);
                 n2 = JTBToolkit.makeNodeToken(n3);
    n5 = jj_consume_token(LPAREN);
            n4 = JTBToolkit.makeNodeToken(n5);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_3;
      }
      n7 = Identifier();
        n6.addNode(n7);
    }
     n6.nodes.trimToSize();
    n9 = jj_consume_token(RPAREN);
            n8 = JTBToolkit.makeNodeToken(n9);
    n10 = Expression();
    n12 = jj_consume_token(RPAREN);
             n11 = JTBToolkit.makeNodeToken(n12);
     {if (true) return new ProcedureExp(n0,n2,n4,n6,n8,n10,n11);}
    throw new Error("Missing return statement in function");
  }

  static final public Application Application() throws ParseException {
   NodeToken n0;
   Token n1;
   Expression n2;
   NodeListOptional n3 = new NodeListOptional();
   Expression n4;
   NodeToken n5;
   Token n6;
    n1 = jj_consume_token(LPAREN);
            n0 = JTBToolkit.makeNodeToken(n1);
    n2 = Expression();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LPAREN:
      case TRUE:
      case FALSE:
      case INTEGER_LITERAL:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_4;
      }
      n4 = Expression();
        n3.addNode(n4);
    }
     n3.nodes.trimToSize();
    n6 = jj_consume_token(RPAREN);
            n5 = JTBToolkit.makeNodeToken(n6);
     {if (true) return new Application(n0,n2,n3,n5);}
    throw new Error("Missing return statement in function");
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  static private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  static private boolean jj_2_9(int xla) {
